fix: shift confirm button

--- a/src/Event.css
+++ b/src/Event.css
@@ -1,4 +1,4 @@
-.final-button {
+/* .final-button {
   height: 30px;
   border-radius: 10px;
   background-color: blueviolet;
@@ -13,3 +13,4 @@
   cursor: pointer;
   background-color: rgb(103, 32, 168);
 }
+ */
